# AEPi

./: .gitignore  AEPi.py  README.md  __init__.py  config.py  pyproject.toml  requirements.txt  setup.cfg  util.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/: set-up-code.yml
.github/actions/set-up-code/: action.yml
.github/workflows/: python-publish.yml  testing.yml
src/AEPi/: __init__.py  codec.py  constants.py  exceptions.py  py.typed
src/AEPi/codecs/: EtcPakCodec.py  PillowCodec.py  RawCodec.py  Tex2ImgCodec.py  __init__.py
src/AEPi/image/: AEI.py  __init__.py  texture.py
src/AEPi/lib/: binaryio.py  imageOps.py
src/tests/: testUtils.py  test_codec.py
src/tests/assets/: Copy TEMP_dxt1smileybgra.aei  TEMP_dxt3smileybgra.aei  TEMP_dxt5smileybgra.aei  pixel dxt5.aei  pixel etc1.aei  pixel_ATC_nomipmap_nosymbols_high.aei  smiley dxt5.aei  smiley etc1.aei  smiley_ATC_twotextures_nomipmap_nosymbols_high.aei  smiley_DXT5_nomipmap_nosymbols_high.aei
src/tests/codecs/: test_EtcPakCodec.py  test_PillowCodec.py  test_Tex2ImgCodec.py
src/tests/image/: test_AEI.py
src/tests/lib/: test_imageOps.py
