[metadata]
name = AEPi
version = attr: AEPi.__version__
author = Jasper Law
author_email = trimatix.music@gmail.com
description = Read and write Abyss Engine Image (AEI) files from python, for Galaxy on Fire 2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Trimatix/AEPi
keywords = game, python, galaxy-on-fire, image-compression, image-conversion, game-mod-tool, abyss-engine
project_urls =
    Bug Tracker = https://github.com/Trimatix/AEPi/issues
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pillow
    etcpak>=0.9.13
    tex2img>=0.9

[options.packages.find]
where=src

[options.extras_require]
test = pytest
